--- a/style.css
+++ b/style.css
@@ -1,106 +1,102 @@
-/* @font-face {
-    font-family: "silk serif";
-    src: url("../fonts/silkserif-regular.ttf") format("truetype");
-} */
-
-*{
-    /* background-color: black; */
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: aliceblue;
-    font-family:"Plain Light";
+    font-family: "Plain Light";
+    color: #fff;
 }
-html,body{
-    width: 100%;
+
+html, body {
     height: 100%;
-    
+    width: 100%;
 }
 #loader{
     height: 100%;
     width: 100%;
     position: fixed;
     z-index: 999;
-    background-color: #0B0B0B;
-    padding: 25vh 11vw;
+    background-color: #030303;
+    padding: 25vh 10vw;
 }
+
 .line{
     /* background-color: red; */
     height: fit-content;
     overflow: hidden;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 3vw;
 }
 #line1-part1{
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 2vw;
-}
-#line1-part1 h5, h6{
-    font-size: 4.5vw;
-    font-family: "silk serif";
+    justify-content: center;
     gap: 1vw;
+
+}
+#line1-part1 h5, #line1-part1 h6{
+    font-size: 3vw;
+    font-weight: 100;
+    font-family: 'silk serif';
+}
+#line1-part1 h5{
+    /* background-color: red; */
+    width: 5vw;
+    text-align: right;
 }
 .line h1{
-    /* padding-left: 1vw; */
     font-size: 6.5vw;
     text-transform: uppercase;
     font-weight: 900;
 }
-#line1-part1 h5{
-    width: 6vw;
-    text-align: right;
-    gap: 1vw;
-}
+
 .line h2{
-    /* padding-left: 1vw; */
-    font-size: 5.03vw;
+    font-size: 5vw;
     text-transform: uppercase;
     font-weight: 900;
     opacity: 0;
-    animation-duration: 1.5s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
 }
-
-@keyframes loadAnime {
+@keyframes anime {
     0%{
-        font-family: "Plain Light";
-        -webkit-text-stroke: 1px white;
-        color: white;
+        font-family: "plain light";
+        -webkit-text-stroke: 1px #fff;
+        color: #fff;
         font-weight: 500;
         opacity: 1;
-
     }
-    47%{
-        font-family: "Plain Light";
-        -webkit-text-stroke: 1px white;
-        color: white;
+    48%{
+        font-family: "plain light";
+        -webkit-text-stroke: 1px #fff;
+        color: #fff;
         font-weight: 500;
         opacity: 0;
-
     }
     50%{
-        font-family: "silk serif";
-        -webkit-text-stroke: 1px white;
-        color: transparent;
+        font-family: 'silk serif';
+        -webkit-text-stroke: 1px #fff;
         font-weight: 500;
+        color: transparent;
         opacity: 1;
-
     }
     100%{
-        font-family: "silk serif";
-        -webkit-text-stroke: white;
+        font-family: 'silk serif';
+        -webkit-text-stroke: 1px #fff;
+        font-weight: 500;
         color: transparent;
         opacity: 0;
     }
 }
-/* #0B0B0B */
+
+
+
+
+
 #main{
     position: relative;
-    background-color: #0B0B0B;
+    background-color: #030303;
 }
 #page1{
     height: 100vh;
